# KVik

./: .gitignore  .gitmodules  API_DESCRIPTION.md  CMakeLists.txt  OUTDATED_README.md  README.md  coefs.txt  get_data.sh  installation.sh  make_plots.py  smhasher.patch  speed.txt  times.txt
artifacts/: out.txt  res1_big.txt  res1_small.txt  res2_big.txt  res2_small.txt  res3_big.txt  res3_small.txt  res4_big.txt  res4_small.txt  res5_big.txt  res5_small.txt
artifacts/ilbro/data/: res2_big.txt  res3_big.txt  res3_small.txt  res4_big.txt  res5_small.txt
artifacts/mishok/data/: res1_small.txt  res4_big.txt
include/: MurmurHash3.h
include/KVik/: Constants.h  KVik.h  KVikBuilder.h  KVikImpl.h  KeyValue.h  Shard.h  ThreadPool.h
include/KVik/memory/: DRAMMemory.h  DirectoryExtandableFileMemoryAllocator.h  DirectoryExtandableFileMemoryAllocator.hpp  DirectoryFileMemoryAllocator.h  DirectoryFixedFileMemoryAllocator.h  DirectoryFixedFileMemoryAllocator.hpp  FileMemory.h  MallocDRAMMemoryAllocator.h  Memory.h  MemoryAllocator.h  MmapDRAMMemoryAllocator.h  ZeroedMemoryAllocator.h
include/KVik/structures/: DataFile.h  Filter.h  HddData.h  HotFiles.h  Index.h  IndexHashTable.h  Log.h  SsdData.h  ThreadPool.h  XXH32BloomFilter.h
meshok/: res1_big.txt  res2_small.txt  res3_big.txt  res4_small.txt  res5_small.txt
scripts/: get_time.sh  make_plots.py  raw.py
src/: KVikImpl.cpp  KeyValue.cpp  KvikBuilder.cpp  MurmurHash3.cpp  Shard.cpp  experiment.cpp  main.cpp
src/memory/: DRAMMemory.cpp  DRAMMemory.hpp  DirectoryFileMemoryAllocator.cpp  DirectoryFileMemoryAllocator.hpp  FileMemory.cpp  FileMemory.hpp  MallocDRAMMemoryAllocator.cpp  MallocDRAMMemoryAllocator.hpp  Memory.hpp  MemoryAllocator.h  MmapDRAMMemoryAllocator.cpp  memory.hpp
src/memory/test/: DRAMMemoryTests.cpp  DirectoryFileMemoryAllocatorTests.cpp  FileMemoryTests.cpp  MallocDRAMMemoryAllocatorTests.cpp
src/structures/: HddData.cpp  IndexHashTable.cpp  IndexImpl.cpp  Log.cpp  LogImpl.cpp  SsdData.cpp
test/: MallocDRAMMemoryAllocatorTests.cpp  TEST.cpp
test/memory/: DRAMMemoryTests.cpp  DirectoryFileMemoryAllocatorTests.cpp  FileMemoryTests.cpp  MallocDRAMMemoryAllocatorTests.cpp  MmapDRAMMemoryAllocatorTests.cpp
test/structures/: HddDataTests.cpp  IndexHashTableTests.cpp  SsdDataTests.cpp  XXH32BloomFilterTests.cpp
